[package]
name = "rinku"
version = "0.1.0"
authors = ["Anton Rybakov <'anryoshi@gmail.com'>"]
edition = "2021"

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
strum = { versoin = "0.24", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
dirs = "4.0"
