[package]
name = "rinku"
version = "0.1.0"
authors = ["Anton Rybakov <'anryoshi@gmail.com'>"]
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
toml = "0.7"
colored = "2.0.0"
